--- a/posts/article one.mdx
+++ b/posts/article one.mdx
@@ -1,7 +1,7 @@
 ---
-title: Diahane
+title: Article one
 description: That's why you always leave a note! I hear the jury's still out on science. Did you enjoy your meal, Mom? You drank it fast enough. I'm half machine. I'm a monster. We just call it a sausage.
-date: "2021-01-10"
+date: "2020-01-10"
 ---
 
 This is an example post. There's another one [here](/posts/example-post).
