Simpler image imports in mdx files

--- a/posts/article one.mdx
+++ b/posts/article one.mdx
@@ -10,7 +10,7 @@ Steve Holt! There's only one man I've ever called a coward, and that's Brian Doy
 
 ## Heading H2
 
-![A bridge](/images/bridge.jpg "round small")
+![A bridge](bridge.jpg "round small")
 
 That's what it said on 'Ask Jeeves.' That's what it said on 'Ask Jeeves.' Across from where? That's why you always leave a note! I hear the jury's still out on science.
 
