--- a/posts/article two.mdx
+++ b/posts/article two.mdx
@@ -1,7 +1,7 @@
 ---
 title: Article two
 description: That's why you always leave a note! I hear the jury's still out on science. Did you enjoy your meal, Mom? You drank it fast enough. I'm half machine. I'm a monster. We just call it a sausage.
-image: "/images/bridge.jpg"
+image: "bridge.jpg"
 date: "2020-02-10"
 ---
 
@@ -11,7 +11,7 @@ Steve Holt! There's only one man I've ever called a coward, and that's Brian Doy
 
 ## Heading H2
 
-![A bridge](/images/bridge.jpg "round small")
+![A bridge](bridge.jpg "round small")
 
 That's what it said on 'Ask Jeeves.' That's what it said on 'Ask Jeeves.' Across from where? That's why you always leave a note! I hear the jury's still out on science.
 
