--- a/posts/example-post.mdx
+++ b/posts/example-post.mdx
@@ -2,11 +2,11 @@
 title: Example Post
 description: I care deeply for nature. Oh, you're gonna be in a coma, all right. He'll want to use your yacht, and I don't want this thing smelling like fish. Get me a vodka rocks. And a piece of toast. No! I was ashamed to be SEEN with you. I like being with you.
 date: "2021-03-20"
-image: "/images/bridge.jpg"
+image: "bridge.jpg"
 author: Not the main author
 ---
 
-![A bridge](/images/bridge.jpg "round")
+![A bridge](bridge.jpg "round")
 
 ## Chapter Title
 
